# NebiletTicketsBot

./: .gitignore  Makefile  main.py  pyproject.toml
calculate/: math.py
database/: __init__.py  db_postgresql.py  db_sqlite.py  utils.py
logger/: __init__.py  logger.py  messages.py
request/: __init__.py  requests.py
telegram/: bot.py  user.session
